--- a/index.html
+++ b/index.html
@@ -209,39 +209,39 @@
       <!-- Consejos de impresión -->
       <section id="consejos">
         <h2>CONSEJOS DE IMPRESIÓN</h2>
-        <div class="texto-consejos">
-          <p>
-            <i class="fas fa-desktop"></i>
+        <ul class="fa-ul">
+          <li>
+            <i class="fa-li fas fa-desktop"></i>
             Antes de realizar un montaje
             <strong>consulta las medidas del pliego </strong>
             a imprimir.
-          </p>
-          <p>
-            <i class="fas fa-palette"></i>
+          </li>
+          <li>
+            <i class="fa-li fas fa-palette"></i>
             Verifica que los colores sean <strong>CMYK</strong>.
-          </p>
-          <p>
-            <i class="fas fa-sticky-note"></i>
+          </li>
+          <li>
+            <i class="fa-li fas fa-sticky-note"></i>
             <strong>Deja margenes</strong> de seguridad de 6mm.
-          </p>
-          <p>
-            <i class="fab fa-fonticons"></i>
+          </li>
+          <li>
+            <i class="fa-li fab fa-fonticons"></i>
             Convertir las tipografías en <strong>"curvas"</strong>.
-          </p>
-          <p>
-            <i class="fas fa-image"></i>
+          </li>
+          <li>
+            <i class="fa-li fas fa-image"></i>
             Utiliza una resolución de <strong>300 dpi</strong>.
-          </p>
-          <p>
-            <i class="fas fa-file-pdf"></i>
+          </li>
+          <li>
+            <i class="fa-li fas fa-file-pdf"></i>
             Envia el archivo en formato <strong>PDF</strong>.
-          </p>
-          <p>
-            <i class="fas fa-search"></i>
+          </li>
+          <li>
+            <i class="fa-li fas fa-search"></i>
             <strong>Informa los detalles</strong> a tener en cuenta para la
             impresión.
-          </p>
-        </div>
+          </li>
+        </ul>
       </section>
     </main>
 
