Transforma contactos en lista usando Boostrap para columnas

--- a/index.html
+++ b/index.html
@@ -163,47 +163,43 @@
         <!-- Contactos -->
         <h3>Contactos</h3>
         <p class="margin">
-          <strong>Horatio de atención:</strong> Lunes a viernes de 8:00hs a
+          <strong>Horario de atención:</strong> Lunes a viernes de 8:00hs a
           16:00hs.
         </p>
-        <div class="row justify-content-around">
-          <div class="col-lg-3">
-            <p>
-              <i class="fas fa-phone-square-alt"></i>
-              0341 - 4635206
-            </p>
-            <p>
-              <i class="fab fa-whatsapp-square"></i>
-              <a href="https://api.whatsapp.com/send?phone=543416028904"
-                >341 - 6028904</a
-              >
-            </p>
-          </div>
-          <div class="col-lg-6">
-            <p>
-              <i class="fas fa-envelope-square"></i>
-              <a href="mailto:cromograficaimpresiones@gmail.com"
-                >cromograficaimpresiones@gmail.com</a
-              >
-            </p>
-            <p>
-              <i class="fas fa-map-marked-alt"></i>
-              Paraguay 4373, Rosario, Santa Fe, Argentina
-            </p>
-          </div>
-          <div class="col-lg-1">
-            <p>
-              <a href="https://www.instagram.com/cromograficaimpresiones/">
-                <i class="fab fa-instagram-square"></i>
-              </a>
-            </p>
-            <p>
-              <a href="https://es-la.facebook.com/CromoGraficaImpresiones/">
-                <i class="fab fa-facebook-square"></i>
-              </a>
-            </p>
-          </div>
-        </div>
+        <ul class="list-unstyled row fa-ul">
+          <li class="col-lg-6">
+            <i class="fa-li fas fa-phone-square-alt"></i>
+            0341-4635206
+          </li>
+          <li class="col-lg-6">
+            <i class="fa-li fab fa-whatsapp-square"></i>
+            <a href="https://api.whatsapp.com/send?phone=543416028904"
+              >341-6028904</a
+            >
+          </li>
+          <li class="col-lg-6">
+            <i class="fa-li fas fa-envelope-square"></i>
+            <a href="mailto:cromograficaimpresiones@gmail.com"
+              >cromograficaimpresiones@gmail.com</a
+            >
+          </li>
+          <li class="col-lg-6">
+            <i class="fa-li fas fa-map-marked-alt"></i>
+            Paraguay 4373, Rosario, Santa Fe, Argentina
+          </li>
+          <li class="col-lg-6">
+            <i class="fa-li fab fa-instagram-square"></i>
+            <a href="https://www.instagram.com/cromograficaimpresiones/">
+              @cromograficaimpresiones
+            </a>
+          </li>
+          <li class="col-lg-6">
+            <i class="fa-li fab fa-facebook-square"></i>
+            <a href="https://es-la.facebook.com/CromoGraficaImpresiones/">
+              CromoGraficaImpresiones
+            </a>
+          </li>
+        </ul>
       </section>
 
       <!-- Consejos de impresión -->
