--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Cromografica</title>
-    <link rel="shortcut icon" type="image/x-icon" href="img/icono.png" />
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="img/icono.png" /> -->
+    <link rel="shortcut icon" type="image/x-icon" href="/img/icon.svg">
     <meta name="description" content="Pagina web de Cromografica impresiones" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -35,11 +36,19 @@
   <body>
     <!-- Nav bar -->
     <!-- ------- -->
-    <nav>
-      <ul class="container">
-        <li><a href="#trabajos">Nuestro Trabajo</a></li>
-        <li><a href="#contactos">Contactos</a></li>
-        <li><a href="#consejos">Consejos de Impresión</a></li>
+    <nav
+      class="navbar navbar-expand-md navbar-dark bg-dark justify-content-center"
+    >
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#trabajos">Nuestro Trabajo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contactos">Contactos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#consejos">Consejos de Impresión</a>
+        </li>
       </ul>
     </nav>
 
@@ -162,7 +171,7 @@
         </div>
         <!-- Contactos -->
         <h3>Contactos</h3>
-        <p class="margin">
+        <p>
           <strong>Horario de atención:</strong> Lunes a viernes de 8:00hs a
           16:00hs.
         </p>
@@ -243,7 +252,7 @@
 
     <!-- Footer -->
     <!-- ------ -->
-    <footer>
+    <footer class="bg-dark">
       <div>
         <p>
           © 2021 Cromo<strong>Grafica</strong> • Todos los derecho reservados. •
