--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>Cromografica</title>
-    <!-- <link rel="shortcut icon" type="image/x-icon" href="img/icono.png" /> -->
-    <link rel="shortcut icon" type="image/x-icon" href="/img/icon.svg">
-    <meta name="description" content="Pagina web de Cromografica impresiones" />
+    <link rel="shortcut icon" type="image/x-icon" href="/img/icono.jpg" />
+    <meta
+      name="descripcion empresarial"
+      content="Cromografica impresiones en una imprenta que ofrece servicios de impresión de calidad "
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Hojas de estilo -->
-    <!-- --------------- -->
+    <!-- --------------------- -->
     <!-- Normalize -->
     <link rel="stylesheet" href="css/normalize.css" />
     <!-- Bootstrap -->
@@ -23,8 +25,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- Font -->
-    <!-- ---- -->
-    <!-- Google font -->
+    <!-- ------- -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap"
       rel="stylesheet"
@@ -35,9 +36,9 @@
 
   <body>
     <!-- Nav bar -->
-    <!-- ------- -->
+    <!-- ------------ -->
     <nav
-      class="navbar navbar-expand-md navbar-dark bg-dark justify-content-center"
+      class="navbar navbar-dark bg-dark navbar-expand justify-content-center"
     >
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -53,17 +54,17 @@
     </nav>
 
     <!-- Header -->
-    <!-- ------ -->
-    <header class="main-header">
+    <!-- ----------- -->
+    <header class="box-shadow main-header">
       <div class="">
-        <img src="img/logo.svg" alt="logo de la imprenta" />
+        <img src="img/logo.svg" alt="logo de la imprenta CromoGrafica" />
         <h1>Cromo<strong>Gráfica</strong></h1>
-        <p>DISEÑO GRÁFICO | IMPRENTA | EDITORIAL</p>
+        <p class="sub-titulo">DISEÑO GRÁFICO | IMPRENTA | EDITORIAL</p>
       </div>
     </header>
 
     <!-- Main -->
-    <!-- ---- -->
+    <!-- ------- -->
     <main class="container">
       <!-- Seccion: Nuestros Trabajos -->
       <section id="trabajos">
@@ -77,65 +78,65 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                class="d-block w-100"
-                src="img/packaging.svg"
-                alt="Imagen donde la empresa comunica que puede realizar todo tipo de packaging"
+                class="d-block w-100 box-shadow"
+                src="img/packaging.jpg"
+                alt="Se ofrece packaging en general"
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
-                src="img/delivery.svg"
-                alt="Imagen con ejemplos de envoltorios para delivery"
+                class="d-block w-100 box-shadow"
+                src="img/delivery.jpg"
+                alt="Se ofrece packaging y envoltorio para delivery: bolsa para papas, Cajas de hamburguesas, sujeta vasos, bandejas papel de envoltura y sulfito"
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
-                src="img/cajas.svg"
-                alt="Imagen que muestra algunas tipos de cajas"
+                class="d-block w-100 box-shadow"
+                src="img/cajas.jpg"
+                alt="Se ofrecen cajas de distintos tipos y formatos"
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
-                src="img/bolsas.svg"
-                alt="Imagen con ejemplos de los trabajos de bolsas empresariales realizados"
+                class="d-block w-100 box-shadow"
+                src="img/bolsas.jpg"
+                alt="Se ofrece la confección de bolas impresas o no en paper obra o cartulina. Consulte por medidas y materiales"
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
-                src="img/troqueles.svg"
-                alt="La imagen muestra diferentes troqueles y se informa la capacidad de la empresa para relanzarlos"
+                class="d-block w-100 box-shadow"
+                src="img/troqueles.jpg"
+                alt="Ss confeccionan todo tipo de troqueles para cajas, posavasos y cajas. Consulte por medidas y troqueles especiales"
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
-                src="img/etiquetas.svg"
-                alt="En la imagen se muestran diferentes tipos de etiquetas realizadas por la empresa"
+                class="d-block w-100 box-shadow"
+                src="img/etiquetas.jpg"
+                alt="Se realizan etiquetas impresas en cartulina y troqueladas. Se ofrecen variedad de materiales y colores."
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
-                src="img/papeleria.svg"
-                alt="La imagen muestra un ejemplo de papelería empresarial que puede hacer la empresa"
+                class="d-block w-100 box-shadow"
+                src="img/papeleria.jpg"
+                alt="Ss confecciona papelería empresarial en general como hojas membretadas, tarjetas personales, carpetas, sobres y mas cosas."
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
-                src="img/revistas.svg"
-                alt="La imagen muestra ejemplos de revistas diseñadas e impresas por la empresa"
+                class="d-block w-100 box-shadow"
+                src="img/revistas.jpg"
+                alt="Ss realizan revistas en general con variedad de medidas, terminación lomo cuadrado y caballete. Realice su consulta"
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
-                src="img/folletos.svg"
-                alt="La imagen muestra los tipos de folletos que la empresa puede realizar"
+                class="d-block w-100 box-shadow"
+                src="img/folletos.jpg"
+                alt="Se ofrece folletería en general con variedad de papeles y formatos"
               />
             </div>
           </div>
@@ -158,6 +159,15 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
+        <div class="card color">
+          <blockquote class="blockquote mb-0 card-body text-center texto-lindo">
+            <p>
+              "Somos una imprenta de origen familiar, dedicada a la papeleria
+              comercia, bolsas boutique/delivery, etiquetas personalizadas,
+              packaging personalizados... Entre muchas cosas mas"
+            </p>
+          </blockquote>
+        </div>
       </section>
 
       <!-- Seccion: Comunicate con nosotros -->
@@ -165,50 +175,61 @@
         <h2>COMUNICATE CON NOSOTROS</h2>
         <div>
           <img
-            src="img/cantidades.svg"
-            alt="La imagen comunica que la empresa puede realizar trabajamos grandes y pequeñas cantidades"
+            class="box-shadow"
+            src="img/cantidades.png"
+            alt="Esta imprenta ofrece realizar trabajos en grandes y pequeñas cantidades"
           />
         </div>
-        <!-- Contactos -->
         <h3>Contactos</h3>
         <p>
           <strong>Horario de atención:</strong> Lunes a viernes de 8:00hs a
           16:00hs.
         </p>
-        <ul class="list-unstyled row fa-ul">
-          <li class="col-lg-6">
+        <ul class="list-unstyled fa-ul">
+          <li>
             <i class="fa-li fas fa-phone-square-alt"></i>
-            0341-4635206
+            Teléfono fijo: 0341-4635206
           </li>
-          <li class="col-lg-6">
-            <i class="fa-li fab fa-whatsapp-square"></i>
-            <a href="https://api.whatsapp.com/send?phone=543416028904"
-              >341-6028904</a
+          <li>
+            <i class="fa-li fab fa-whatsapp-square"></i> WhatsApp:
+            <a href="https://api.whatsapp.com/send?phone=543415522940"
+              >341-5522940</a
+            >
+            /
+            <a href="https://api.whatsapp.com/send?phone=543415868252"
+              >341-5868252</a
             >
           </li>
-          <li class="col-lg-6">
+          <li>
             <i class="fa-li fas fa-envelope-square"></i>
+            Mail:
             <a href="mailto:cromograficaimpresiones@gmail.com"
               >cromograficaimpresiones@gmail.com</a
             >
           </li>
-          <li class="col-lg-6">
-            <i class="fa-li fas fa-map-marked-alt"></i>
-            Paraguay 4373, Rosario, Santa Fe, Argentina
-          </li>
-          <li class="col-lg-6">
+        </ul>
+        <p><strong>Encontranos en redes sociales como:</strong></p>
+        <ul class="list-unstyled fa-ul">
+          <li>
             <i class="fa-li fab fa-instagram-square"></i>
             <a href="https://www.instagram.com/cromograficaimpresiones/">
               @cromograficaimpresiones
             </a>
           </li>
-          <li class="col-lg-6">
+          <li>
             <i class="fa-li fab fa-facebook-square"></i>
             <a href="https://es-la.facebook.com/CromoGraficaImpresiones/">
               CromoGraficaImpresiones
             </a>
           </li>
         </ul>
+        <div class="ubicacion">
+          <iframe
+            class="box-shadow"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3346.63913556664!2d-60.656248884812584!3d-32.98692128090917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abccf027d80b%3A0x92de7b9671870523!2sCromografica%20impresiones!5e0!3m2!1ses!2sar!4v1628085826816!5m2!1ses!2sar"
+            loading="lazy"
+          ></iframe>
+        </div>
       </section>
 
       <!-- Consejos de impresión -->
@@ -251,18 +272,20 @@
     </main>
 
     <!-- Footer -->
-    <!-- ------ -->
+    <!-- ---------- -->
     <footer class="bg-dark">
       <div>
         <p>
-          © 2021 Cromo<strong>Grafica</strong> • Todos los derecho reservados. •
-          Diseñado por <a href="https://github.com/aguspes">Agustina Pesce.</a>
+          © 2021 Cromo<strong>Grafica</strong> Impresiones • Todos los derecho
+          reservados • Diseñado por
+          <a href="https://github.com/aguspes">Agustina Pesce.</a>
         </p>
       </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+    <!-- ---------- -->
+    <script src="js/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <!-- Bootstrap Bundle with Pooper -->
     <script
